# test-interview-math-api

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/api/: v1.py
app/domain/: complex_number_library.py  interfaces.py  services.py
app/tests/: test_number.py  test_numbers.py
